<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.ui.main.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingStart="10dp"
        android:paddingTop="30dp"
        android:paddingEnd="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/btn_toast_snake_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_toast_snake"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <Button
                    android:id="@+id/btn_notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_notification"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_toast_snake_fragment"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <Button
                    android:id="@+id/btn_work_manager"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_work_manager"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_notification"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <Button
                    android:id="@+id/btn_material_components"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_material_components"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_work_manager"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <Button
                    android:id="@+id/btn_interactive_ui"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_interactive_ui"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_material_components"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <Button
                    android:id="@+id/btn_activities_intents"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_activities_intent"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_interactive_ui"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <Button
                    android:id="@+id/btn_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_recycler_view"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_activities_intents"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <Button
                    android:id="@+id/btn_user_nav_tab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_user_navigation_tab"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_recycler_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

                <Button
                    android:id="@+id/btn_user_nav_drawer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_user_navigation_drawer"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_user_nav_tab"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <Button
                    android:id="@+id/btn_menu_pickers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_menu_pickers"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_user_nav_drawer"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <Button
                    android:id="@+id/btn_themes_touches"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_themes_touches"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_menu_pickers"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <Button
                    android:id="@+id/btn_themes_touches_baterry"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_themes_touches_baterry"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_themes_touches"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <Button
                    android:id="@+id/btn_room_with_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_room_with_view"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_themes_touches_baterry"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <Button
                    android:id="@+id/btn_room_livedata_viewmodel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_livedata_viewmodel"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_room_with_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <Button
                    android:id="@+id/btn_repository"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_repository"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_room_livedata_viewmodel"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <Button
                    android:id="@+id/btn_shared_preferences"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_shared_preferences"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_repository"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <Button
                    android:id="@+id/btn_anim_pulse_explode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_anim_pulse_explode"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_shared_preferences"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <Button
                    android:id="@+id/btn_user_nav"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_user_navigation"
                    android:textAllCaps="false"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/btn_anim_pulse_explode"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>



</layout>